2010-12-15  Leonardo Martins  <leonardo@cose.fee.unicamp.br>

	* @problema/private/construir_d.m: 
	Adaptação ao esquema de empacotamento [patamar[intervalos[subsistemas]]].

	* @problema/private/construir_bb.m:
	Função adicionada em substituição a construir_bring.
	
	* @io/private/mco_.m ([MSUB], [GPUH]):
	Adaptação ao esquema de empacotamento [patamar[intervalos[subsistemas]]].

	* @io/private/net_.m ([LIMA], [LIMI]):
	Adaptação ao esquema de empacotamento [patamar[intervalos[linhas]]].

2010-12-14  Leonardo Martins  <leonardo@cose.fee.unicamp.br>

	* @problema/{problema,set,get,dump}.m
	(obj.R, obj.S, obj.sj): Propriedades removidas.
	(obj.Q, obj.Ql, obj.V, obj.X, obj.Xj): Propriedades adicionadas.
	
	* @problema/private/construir_R.m: Função removida.
	
	* @problema/private/construir_X.m:
	Função adicionada em substituição a construir_S.
	
	* @problema/private/construir_Q.m:
	Função adicionada para suporte a patamares.
	
	* @problema/private/construir_V.m: Função adicionada.

2010-12-13  Leonardo Martins  <leonardo@cose.fee.unicamp.br>

	* @sistema/sistema.m (obj.np, obj.tp):
	Removido suporte a número variável de patamares de carga por intervalo.
	
	* @io/private/hco_.m ([NPAT], [DPAT]):
	Removido suporte a número variável de patamares de carga por intervalo.

	* @io/private/mco_.m ([NPAT], [MSUB], [GPUH]):
	Removido suporte a número variável de patamares de carga por intervalo.
	
	* @io/private/net_.m ([NPAT], [LIMA], [LIMI]):
	Removido suporte a número variável de patamares de carga por intervalo.
	
	* @io/private/ute_.m ([NPAT], [PUGT], [TXID], [GMIN], [FCMX]):
	Removido suporte a número variável de patamares de carga por intervalo.
	
	* @ute/ute.m (obj.fc, obj.id, obj.gn, obj.pe):
	Removido suporte a número variável de patamares de carga por intervalo.
	
	* @problema/construir.m:
	Removido suporte a número variável de patamares de carga por intervalo.

	* @problema/private/construir_{A,B,C}.m: