@@ -29,79 +29,103 @@
 % (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 % THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 function obj = construir_ub(obj)
-  % maximum spill factor
+  % maximum water spill factor
   beta= 10;
   % system data
   af= get(obj.si,'af');
   im= get(obj.si,'im');
   ni= get(obj.si,'ni');
   nl= get(obj.si,'nl');
+  np= get(obj.si,'np');
   nq= get(obj.si,'nq');
   nt= get(obj.si,'nt');
   nu= get(obj.si,'nu');
   uh= get(obj.si,'uh');
   ut= get(obj.si,'ut');
   vm= get(obj.si,'vm');
-  % unpack lower bounds
-  ls= reshape(obj.ls,nu,ni);
-  lq= reshape(obj.lq,nu,ni);
-  lv= reshape(obj.lv,nu,ni);
-  % allocate storage
-  uq= zeros(nu,ni);
+  %% upper bounds on reservoir storage
+  obj.us= reshape(vm, nu*ni, 1);
+  %% upper bounds on water release
+  %  memory allocation
+  uq= cell(np, 1);
   uv= zeros(nu,ni);
-  us= vm;
-  % check for consistency in storage bounds
-  for k= 1:nu
-    ls(k,ni)= min(us(k,ni), ls(k,ni));
-    % TODO: Print warning message
+  for l= 1:np
+    uq{l}= zeros(nu,ni);
   end
-  % release bounds
   for k= 1:nu
-    % release upper bounds
-    dm= get(uh{k},'dm');
+    % maximum incremental inflow
+    maf= max(af(k,:));
+    % upper limit
     for j= 1:ni
-      % compute maximum discharge
-      %  (function of the number of available generators)
-      qef= qm(uh{k},nq(k,j));
-      % set maximum discharge
-      uq(k,j)= qef;
-      % compute maximum spill
-      uv(k,j)= dm - qef;
-      % check for consistency with lower bounds
-      if uq(k,j) < lq(k,j)
-        lv(k,j)= lv(k,j) + (lq(k,j) - uq(k,j));
-        lq(k,j)= 0;
-        % TODO: Print warning message
+      % compute maximum water discharge 
+      % as a function of the number of available generators
+      qef= qm(uh{k}, nq(k,j));
+      for l= 1:np
+        uq{l}(k,j)= qef;
+      end
+      % compute maximum water spill
+      uv(k,j)= max([maf; beta*qef]);
+    end
+  end
+  %  memory allocation for one-dimensional data packing
+  obj.uq= zeros(nu*np*ni, 1);
+  obj.uv= reshape(uv, nu*ni, 1);
+  %  store data
+  n= nu*ni;
+  for l= 1:np
+    obj.uq(n*(l-1)+1 : n*l)= reshape(uq{l}, n, 1);
+  end
+  %  clear temporary buffers
+  clear n;
+  clear dm;
+  clear uq;
+  clear uv;
+  clear qef;
+  %% upper bounds on power transmission
+  %  memory allocation for one-dimensional data packing
+  obj.uy= zeros(obj.ny, 1);
+  %  fill in elements
+  n= nl*ni;
+  for l= 1:np
+    obj.uy(n*(l-1)+1 : n*l)= reshape(im{l}, n, 1);
+  end
+  % clear temporary buffer
+  clear n;
+  %% upper bounds thermal power generation
+  uz= cell(np, 1);
+  for l= 1:np
+    uz{l}= zeros(nt, ni); 
+  end
+  %  fill in elements
+  for t= 1:nt
+    gm= get(ut{t},'gm');
+    for l= 1:np
+      for j= 1:ni
+        uz{l}(t,j)= gm(l,j);
       end
     end
   end
-  % upper bounds on water spill
-  for k= 1:nu
-    for j= 1:ni
-      uv(k,j)= max([max(af(k,:)); beta*uq(k,j)]);
-    end
+  % memory allocation for one-dimensional data packing
+  obj.uz= zeros(obj.nz, 1);
+  % store data
+  n= nt*ni;
+  for l= 1:np
+    obj.uz(n*(l-1)+1 : n*l)= reshape(uz{l}, n, 1);
   end
-  % upper bounds on power transmission
-  uy= im;
-  % upper bounds thermal power generation
-  uz= zeros(nt,ni);
-  for t= 1:nt
-    uz(t,:)= get(ut{t},'gm');
+  % clear temporary buffer
+  clear n;
+  clear gm;
+  clear uz;
+  %% sanity check overlapping bounds
+  if     ~isempty(find(obj.us - obj.ls <= 0, 1))
+    error('sinopt:problema:construir_ub:invalidInput','Interior set is empty');
+  elseif ~isempty(find(obj.uq - obj.lq <= 0, 1))
+    error('sinopt:problema:construir_ub:invalidInput','Interior set is empty');
+  elseif ~isempty(find(obj.uv - obj.lv <= 0, 1))
+    error('sinopt:problema:construir_ub:invalidInput','Interior set is empty');
+  elseif ~isempty(find(obj.uy - obj.ly <= 0, 1))
+    error('sinopt:problema:construir_ub:invalidInput','Interior set is empty');
+  elseif ~isempty(find(obj.uz - obj.lz <= 0, 1))
+    error('sinopt:problema:construir_ub:invalidInput','Interior set is empty');
   end
-  % data packing
-  lq= reshape(lq,nu*ni,1);
-  lv= reshape(lv,nu*ni,1);
-  us= reshape(us,nu*ni,1);
-  uq= reshape(uq,nu*ni,1);
-  uv= reshape(uv,nu*ni,1);
-  uy= reshape(uy,nl*ni,1);
-  uz= reshape(uz,nt*ni,1);
-  % data update
-  obj.lq= lq;
-  obj.lv= lv;
-  obj.us= us;
-  obj.uq= uq;
-  obj.uv= uv;
-  obj.uy= uy;
-  obj.uz= uz;
 end
